# OMR_Mixing_Times

./: CMakeLists.txt
app/: test.cpp  timetillzero.cpp
include/: grid.h  makegraph.h  makenetwork.h  network.h  util.h
src/: grid.cpp  makegraph.cpp  makenetwork.cpp  network.cpp  util.cpp
